--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   dio: ^5.4.3+1
   flutter_bloc: ^8.1.5
+  meta: ^1.12.0
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
